--- a/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
+++ b/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
@@ -20,6 +20,7 @@
 			</div>
 			<div class="form-buttons">
 				<input class="olv-modal-close-button black-button memo-finish-btn" type="button" value="Finish">
+				<button type="button" class="artwork-lock none"></button>
 			  </div>
 		</div>
 	  </div>
