--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -21,6 +21,11 @@
 		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
 		<h3>Spam</h3>
 		<p>Please don't, I have an Amazon Web Services bill to pay at the end of each month.</p>
+		<h3>Yeahing</h3>
+		<p>This is spam. If you use a script to do this, you're paying the bills for the month.</p>
+		
+		<h2>And?</h2>
+		<p>If you're being funny, we'll be funny back ;)</p>
       </div>
   </div>
 </div>
