--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -13,9 +13,9 @@
     <meta name="apple-mobile-web-app-title" content="Closedverse">
     <meta name="description" content="Closedverse is a social network made by Arian Kordi that allows you to discuss games, communities and more. With over-protective administration and a post limit, you're sure to have fun here!">
 	<link rel="shortcut icon" type="image/png" href="{% static "favicon.png" %}">
-    <link rel="stylesheet" type="text/css" href="{% static "closedverse.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "closedverse.min.css" %}">
 	<link id="darkness" {% if request.session.lights %}disabled {% endif %}rel="stylesheet" type="text/css" href="{% static "blueness.css" %}">
-    <script src="{% static "closedverse.js" %}"></script>
+    <script src="{% static "closedverse.min.js" %}"></script>
   </head>
 
   <body class=""{% if request.user.is_authenticated %}
@@ -36,7 +36,7 @@
               <li id="global-menu-my-menu"><button class="symbol js-open-global-my-menu open-global-my-menu"></button>
                 <menu id="global-my-menu" class="invisible none">
                   <li><a href="{% url "main:profile-settings" %}" class="symbol my-menu-profile-setting"><span>Profile settings</span></a></li>
-                  <li><a href="#" class="symbol my-menu-account-setting"><span>Account settings</span></a></li>
+                  <li><a href="#" class="symbol my-menu-account-setting"><span>Account preferences</span></a></li>
                   <li><a href="{% url "main:special-community-tag" "announcements" %}" class="symbol my-menu-openman"><span>Closedverse Announcements</span></a></li>
                   <li><a href="{% url "main:special-community-tag" "changelog" %}" class="symbol my-menu-openman"><span>Closedverse Changelog</span></a></li>
                   <li><a href="{% url "main:help-faq" %}" class="symbol my-menu-guide"><span>Frequently Asked Questions (FAQ)</span></a></li>
