--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -17,6 +17,8 @@
 		<p>If you edit a post, set a post as a favorite, send a friend request, etc. and then it appears that didn't go through but refreshing the page makes the changes, this means that my database is slow.<br>I don't expect this to happen much, but at times, the database can pretend to be finished when it's not, your browser could refresh after an action, and the database still isn't done.<br>Again, this is only a problem I've been encountering on my development server, so I don't expect this to be a thing here.</p>
 		<h2>Can I delete my account?</h2>
 		<p>No. If you need to delete one by emergency though, contact me.<br>The reason is kinda simple: it's like a domino effect if I delete your account, if I delete your account, then your profile, posts, comments, messages, friendships, follows, etc. are deleted. Obviously, that should be so, but I don't have a "fake deletion" system like Miiverse does, if it's deleted, then it's GONE forever, bye-bye, see ya.<br>I might make it a thing in the future though.</p>
+		<h2>I don't like my username, can you give me another one?</h2>
+		<p>I can do that, but there's one catch: if you change your username, all of your content is still there, but the URL to your user page won't be the same. <br>So, I can do this, but not often. Just let me know what's up and I'll do it.</p>
 		<h2>I'm not getting emails when resetting my password.</h2>
 		<p>Sorry, I don't know what to do when that happens. Of course, you should check your spam folder, since I'm not using my own host and am using PF2M's because his is easier to manage.<br>Again, contact me/us.</p>
 		<h2>How do I set a custom avatar?</h2>
