--- a/closedverse_main/templates/closedverse_main/signup_page.html
+++ b/closedverse_main/templates/closedverse_main/signup_page.html
@@ -6,7 +6,7 @@
 			<img src="{% static "img/menu-logo.png" %}">
 			<p class="lh">Sign Up</p>
 			<p>Create a Closedverse account to make posts and comments to various communities, give Yeahs to other users' content, and interact with other members of the Closedverse community.</p>
-			<h3 class="label"><label><span class="red">*</span> User ID: <input type="text" class="auth-input" name="username" maxlength="32" minlength="4" placeholder="ID"></label></h3>
+			<h3 class="label"><label><span class="red">*$</span> User ID: <input type="text" class="auth-input" name="username" maxlength="32" minlength="4" placeholder="ID"></label></h3>
 			<h3 class="label"><label>Nickname: <input type="text" class="auth-input" name="nickname" maxlength="32" placeholder="Nick/Mii name?"></label></h3>
 			<h3 class="label"><label>Nintendo Network ID: <input type="text" class="auth-input" name="origin_id" maxlength="16" minlength="6" placeholder="NNID"></label></h3>
 			<h3 class="label"><label><span class="red">%</span> E-mail address: <input type="email" class="auth-input" name="email" maxlength="254" minlength="6" placeholder="Email"></label></h3>
@@ -26,6 +26,7 @@
 				<p>If you do not provide a nickname but provide an NNID, the nickname will be taken from that ID. The ID's nickname, however, is prioritized over the nickname field.</p>
 				<p>You will be able to change your avatar after you sign up.</p>
 				<p><span class="red">%</span>: If you don't fill in your email address, you can't reset your password until you have one.</p>
+				<p><span class="red">$</span>: Your username is used to log in. It'll appear similarly to your NNID on Miiverse: below your nickname.</p>
 			</div>
 		</form>
 	</div>
