--- a/closedverse_main/templates/closedverse_main/login_page.html
+++ b/closedverse_main/templates/closedverse_main/login_page.html
@@ -7,7 +7,7 @@
 			<p class="lh">Log In</p>
 			<p>Sign in with a Closedverse account to create and give Yeahs to posts and comments, edit your profile, and connect with other Closedverse users.</p>
 			<p><strong>Note</strong>: If you have an Openverse, Cedar or Grape account, none of those will work here, this is a completely new and different architecture.</p>
-			<h3 class="label"><label>Username: <input type="text" class="auth-input" name="username" maxlength="32" placeholder="Username"></label></h3>
+			<h3 class="label"><label>User ID: <input type="text" class="auth-input" name="username" maxlength="32" placeholder="User ID"></label></h3>
 			<h3 class="label"><label>Password: <input type="password" class="auth-input" name="password" maxlength="32" placeholder="Password"></label></h3>
 			{% csrf_token %}
 			
