Working on polling

--- a/closedverse_main/templates/closedverse_main/post-view.html
+++ b/closedverse_main/templates/closedverse_main/post-view.html
@@ -59,7 +59,17 @@
           <p class="post-content-text">{{ post.body|linebreaksbr }}</p>
 	      {% endif %}
 		  
-		  {% if post.screenshot %}<div class="screenshot-container still-image"><img src="{{ post.screenshot }}"></div>{% endif %}
+		  {% if post.poll %}
+		  <div class="post-poll">
+			<a class="poll-votes">{{ post.poll.num_votes }} votes</a>
+				<div class="poll-options{% if post.screenshot %} with-background" style="background-image:url('{{ post.screenshot }}')"{% else %}"{% endif %}>
+					<a class="poll-option">
+						{% for opt in post.poll.choices %}
+						<div class="poll-background" style="width:50%"></div>{{ opt }}<span class="percentage">50%</span></a>
+						{% endfor %}
+				</div>
+			</div>
+		  {% elif post.screenshot %}<div class="screenshot-container still-image"><img src="{{ post.screenshot }}"></div>{% endif %}
 
 			{% if post.yt_vid %}
 			<div class="screenshot-container video"><iframe class="youtube-player" type="text/html" width="490" height="276" src="https://www.youtube.com/embed/{{ post.yt_vid }}?rel=0&modestbranding=1&iv_load_policy=3" frameborder="0"></iframe></div>
