Online statuses and I forgot what else

--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -23,9 +23,13 @@
 		<p>Sorry, I don't know what to do when that happens. Of course, you should check your spam folder, since I'm not using my own host and am using PF2M's because his is easier to manage.<br>Again, contact me/us.</p>
 		<h2>How do I set a custom avatar?</h2>
 		<p>To do that, you need a Gravatar account. Gravatar lets sites automatically get an avatar from an e-mail address registered on Gravatar.<br>So, first, register for Gravatar on <a href="https://en.gravatar.com/">their site</a>. Yes, you need a WordPress account, but you might find more sites that use Gravatar.<br>After you have that set up, your avatar won't instantly update, you have to go into <a href="{% url "main:profile-settings" %}">Profile Settings</a> and select (or re-select) your avatar as a Gravatar, then actually that's it.<br>GIFs may or may not work. I'm not sure. I don't like them anyway, so yeah.</p>
+		<h2>How do I disable yeah notifs?</h2>
+		<p>Go into your Account Settings in your user menu (the menu icon thing) and do it there. That simple.</p>
 		
 		<h2>Less question-y questions</h2>
-		<h2>What's with the Splatoon loading animation? It looks stupid.</h2>
+		<h3>Ew, why are you using reCAPTCHA?</h3>
+		<p>Sorry, but we have to.</p>
+		<h3>What's with the Splatoon loading animation? It looks stupid.</h3>
 		<p>I thought it looked good enough. It doesn't appear on mobile if you're using a smaller device (iPhone 5, etc.), so you're not going to know what this is talking about if you're using that.</p>
         <h3>Haha, now where's my Markdown?</h3>
 		<p>Sorry, but I just haven't been able to make it happen. Discord's Markdown is really just fake Markdown, as it has lots more to it: headings, images, links, paragraphs, you get the idea. All of the implementations of Markdown in Python have either all of that or nothing.<br>There is really Markdown, but it's in Messages, which is why one line break now looks like a space in messages.<br>Again, sorry. If anyone could find a good enough text formatting implementation that works in Django, let me know.</p>
