--- a/closedverse_main/templates/closedverse_main/elements/file-button.html
+++ b/closedverse_main/templates/closedverse_main/elements/file-button.html
@@ -1,6 +1,6 @@
 
   <label class="file-button-container">
-      <span class="input-label">Image <span>PNG, JPG, BMP and GIF are allowed.</span></span>
+      <span class="input-label">Image <span>PNG, JPG, and BMP are allowed.</span></span>
       <input type="file" class="file-button" accept="image/png, image/jpeg, image/svg+xml,  image/bmp, image/gif">
       <input type="hidden" name="screenshot" value="">
     </label>
