--- a/closedverse_main/templates/closedverse_main/elements/message-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/message-form.html
@@ -20,9 +20,9 @@
   {% memo_drawboard %}
   
 	</div>
-
+  {% if user.has_freedom %}
   {% file_button %}
-
+  {% endif %}
 
   <div class="post-form-footer-options">
 
