--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -23,6 +23,8 @@
 		<p>Please don't, I have an Amazon Web Services bill to pay at the end of each month.</p>
 		<h3>Yeahing</h3>
 		<p>This is spam. If you use a script to do this, you're paying the bills for the month.</p>
+		<h3>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h3>
+		<p>You're not funny, and you won't have any mercy laid on yourself.</p>
 		
 		<h2>And?</h2>
 		<p>If you're being funny, we'll be funny back ;)</p>
