--- a/closedverse_main/templates/closedverse_main/elements/comment-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/comment-form.html
@@ -21,7 +21,9 @@
   {% memo_drawboard %}
 
   </div>
+	  {% if user.has_freedom %}
   	  {% file_button %}
+	  {% endif %}
 
   <div class="post-form-footer-options">
     <div class="post-form-footer-option-inner post-form-spoiler">
