--- a/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
+++ b/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
@@ -138,7 +138,22 @@
 		</div>
 	</div>
   </div>
+  {% if user.community_favorites %}
+  <div class="sidebar-container sidebar-favorite-community">
+      <h4><a href="{% url "main:community-favorites" %}{% if not user.is_me %}?u={{ user.username }}{% endif %}" class="symbol favorite-community-button"><span>Favorite communities</span></a></h4>
+      <ul class="test-favorite-communities">
+	        {% for community in user.community_favorites %}
+			
+              	<li class="favorite-community">
+				  <a href="{% url "main:community-view" community.id %}" class="icon-container">
+					<img src="{{ community.icon }}" class="icon">
+				  </a>
+				</li>
+			{% endfor %}
+      </ul>
+    </div>
   {% endif %}
+ {% endif %}
 
     
 </div>
